--- a/homeworks/Алексей/HTML + CSS/style/possibilities.css
+++ b/homeworks/Алексей/HTML + CSS/style/possibilities.css
@@ -18,26 +18,24 @@
 }
 
 .possibilities-container {
-    height: 280px;
-    width: 320px;
-    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    width: 100%;
     gap: 19px;
 }
 
 .possibilities-item-img {
-    position: relative;
-    display: inline-block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
     justify-content: center;
     align-items: center;
+    z-index: 0;
  }
 
 .possibilities-item-text {
-    position: absolute;
-    color: black;
+    position: relative;
+    color: white;
     font-size: 24px;
     z-index: 1;
     display: flex;
@@ -50,4 +48,10 @@
 
 .possibilities-title {
     padding-bottom: 1px;
+}
+
+.possibilities-item {
+    position: relative;
+    height: 280px;
+    width: 320px;
 }
