--- a/homeworks/Михаил/2. HTML + CSS/style/possibilities.css
+++ b/homeworks/Михаил/2. HTML + CSS/style/possibilities.css
@@ -1,9 +1,9 @@
 .possibilities-container {
     display: flex ;
     flex-wrap: wrap;
-    justify-content:space-between;   
+    justify-content:space-between;
     row-gap: 19px;
-    
+
 }
 
 .possibilities-afterh2text {
@@ -15,9 +15,9 @@
 .possibilities-item-img {
   height: 100%;
   width: 100%;
-  position: absolute;  
+  position: absolute;
   z-index: -1;
-  top: 0;   
+  top: 0;
   left: 0;
 }
 
@@ -48,6 +48,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 50%;
+    border: none;
 }
 
 .plus-vert {
@@ -57,7 +58,7 @@
     height: 15px;
     background-color: #1EACC7;
     border-radius: 25%;
-    
+
 }
 
 .plus-horiz {
@@ -66,5 +67,5 @@
     height: 2px;
     background-color: #1EACC7;
     border-radius: 25%;
-    
+
 }
