--- a/homeworks/Алексей/HTML + CSS/style/style.css
+++ b/homeworks/Алексей/HTML + CSS/style/style.css
@@ -3,3 +3,7 @@
 @import "promo.css";
 @import "features.css";
 @import "possibilities.css";
+@import "choice.css";
+@import "conditions.css";
+@import "map.css";
+@import "footer.css";
