--- a/course/2. HTML + CSS/style/style.css
+++ b/course/2. HTML + CSS/style/style.css
@@ -4,3 +4,6 @@
 @import "features.css";
 @import "possibilities.css";
 @import "choice.css";
+@import "rules.css";
+@import "map.css";
+@import "footer.css";
