--- a/course/2. HTML + CSS/style/base.css
+++ b/course/2. HTML + CSS/style/base.css
@@ -9,6 +9,7 @@
 .container {
     max-width: 1064px;
     margin: 0 auto;
+    height: 100%;
 }
 
 li {
@@ -30,6 +31,10 @@ a {
     background: linear-gradient(0deg, #1EACC7 0%, #4CE2FF 100%);
     padding: 20px 30px;
     text-transform: uppercase;
+}
+
+.btn:hover {
+    background: linear-gradient(0deg, #015c6e 0%, #033d48 100%);
 }
 
 h1 {
@@ -73,4 +78,28 @@ h2.title_white {
 
 .align-center {
     text-align: center;
+}
+
+@media (max-width: 756px) {
+    h1 {
+        font-size: 30px;
+    }
+
+    h2 {
+        font-size: 20px;
+    }
+
+    .container {
+        padding-left: 13px;
+        padding-right: 13px;
+    }
+
+    a {
+        font-size: 18px;
+    }
+
+    .btn {
+        font-size: 18px;
+        padding: 8px;
+    }
 }
