--- a/course/2. HTML + CSS/style/features.css
+++ b/course/2. HTML + CSS/style/features.css
@@ -45,3 +45,14 @@
     font-size: 17px;
     color: #1EACC7;
 }
+
+@media (max-width: 756px) {
+    .features-item {
+        flex-direction: column;
+    }
+
+    .features-container {
+        align-items: center;
+        justify-content: center;
+    }
+}
